App Soccer FE | Fix nav and main container spacing

--- a/src/app/components/play-tournament-dashboard/play-tournament-dashboard.component.scss
+++ b/src/app/components/play-tournament-dashboard/play-tournament-dashboard.component.scss
@@ -5,16 +5,17 @@
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   margin: 1% 0;
-  padding: 10%;
+  padding: 5%;
   font-family: $regular;
   position: relative;
 }
 
 .nav {
   &-container {
-    margin: 1.5rem 0;
+    margin: 1.5rem auto;
     display: flex;
     justify-content: space-around;
+    width: 75%;
   }
   &-item {
     border-radius: 2rem;
